services/fd-tagging-tool/src/test/resources/invalid/NoFeaturePresent/NoFeaturePresent.mt
// (c) https://github.com/MontiCore/monticore
package invalid.NoFeaturePresent;

component NoFeaturePresent {
  Source source;
  Sink sink;

  source.value -> sink.value;
}